--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "AWBW Enhancements",
-    "description": "Replay keyboard shortcuts and moveplanner enhancements for Advance Wars By Web.",
-    "version": "2024.5.22.0",
+    "name": "AWBW Enhancements Plus",
+    "description": "Replay keyboard shortcuts and moveplanner enhancements for Advance Wars By Web. Fork with additional hotkeys (Quick Build, Advanced Move Planner controls) and fixes.",
+    "version": "2025.11.20.0",
     "icons": {
         "16": "/res/images/fighter_icon16.png",
         "32": "/res/images/fighter_icon32.png",
