--- a/manifests/manifest_ff.json
+++ b/manifests/manifest_ff.json
@@ -1,8 +1,15 @@
 {
     "manifest_version": 2,
     "permissions": [
-        "storage"
+        "storage",
+        "downloads",
+        "https://awbw.amarriner.com/*"
     ],
+    "background": {
+        "scripts": [
+            "background/service_worker.js"
+        ]
+    },
     "browser_specific_settings": {
         "gecko": {
             "id": "{8a19e478-4d8f-4375-b3dc-1102abcfd2c8}"
