--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-    "name": "AWBW Enhancements",
+    "name": "AWBW Enhancements Plus",
     "description": "Replay keyboard shortcuts and moveplanner enhancements for Advance Wars By Web.",
     "version": "2024.5.22.0",
     "icons": {
@@ -64,28 +64,26 @@
             ]
         }
     ],
-    "manifest_version": 3,
+    "manifest_version": 2,
     "permissions": [
         "storage",
-        "downloads"
-    ],
-    "background": {
-        "service_worker": "background/service_worker.js"
-    },
-    "host_permissions": [
+        "downloads",
         "https://awbw.amarriner.com/*"
     ],
-    "web_accessible_resources": [
-        {
-            "matches": [
-                "https://awbw.amarriner.com/*"
-            ],
-            "resources": [
-                "/res/axios_throttler.js",
-                "/res/playersinfo_patcher.js",
-                "/res/savestate_injector.js",
-                "/res/unitsinfo_patcher.js"
-            ]
+    "background": {
+        "scripts": [
+            "background/service_worker.js"
+        ]
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "{8a19e478-4d8f-4375-b3dc-1102abcfd2c8}"
         }
+    },
+    "web_accessible_resources": [
+        "/res/axios_throttler.js",
+        "/res/playersinfo_patcher.js",
+        "/res/savestate_injector.js",
+        "/res/unitsinfo_patcher.js"
     ]
 }
