--- a/manifests/manifest_common.json
+++ b/manifests/manifest_common.json
@@ -1,5 +1,5 @@
 {
-    "name": "AWBW Enhancements",
+    "name": "AWBW Enhancements Plus",
     "description": "Replay keyboard shortcuts and moveplanner enhancements for Advance Wars By Web.",
     "version": "2024.5.22.0",
     "icons": {
